--- a/autoexec.cfg
+++ b/autoexec.cfg
@@ -1,9 +1,9 @@
 clear;
 echo "Loading";
-echo "Fin#1337's TF2 Config v1.0.0";
+echo "Fin#1337's TF2 Config v1.0.1";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: January 12th 2022";
+echo "Last edited: August 9th 2022";
 echo "";
 echo "";
 echo "";
@@ -37,7 +37,7 @@ tf_mm_trusted "1";                                              // "Set to 1 on 
 sv_steamblockingcheck "4";                                      // Check each new player for Steam blocking compatibility, 1 = message only, 2 >= drop if any member of owning clan blocks,3 >= drop if any player has blocked, 4 >= drop if player has blocked anyone on server
 cl_mute_all_comms "1";                                          // If 1, then all communications from a player will be blocked when that player is muted, including chat messages.
 exec "fixed_360controller.cfg";                                 // Enables controller support
-hostname "Fin's TF2 Config 0.1.0-rc12 - github.com/bigfinfrank/cfg"; // Sets the server name shown in the scoreboard
+hostname "Fin's TF2 Config 1.0.1 - github.com/bigfinfrank/cfg"; // Sets the server name shown in the scoreboard
 
 
 
@@ -119,7 +119,7 @@ mat_parallaxmap "0"                                             // Presumably di
 mat_managedtextures "0"                                         // If set, allows Direct3D to manage texture uploading at the cost of extra system memory
 mat_forcemanagedtextureintohardware "0"                         // Disables hardware D3D managed textures
 lzma_persistent_buffer "1";                                     // If set, attempt to keep a persistent buffer for the LZMA decoder dictionary. This avoids re-allocating a ~16-64meg buffer for each operation, at the expensive of keeping extra memory around when it is not in-use
-
+mod_load_mesh_async "0";                                        // Disabled as it causes certain mod incompatabilities
 
 
 echo "[3.0] Changing console settings";
@@ -131,8 +131,8 @@ developer "1";                                                  // This enables 
 
 echo "[3.1] Setting up console filtering";
 con_filter_text_out "Player with no steam ID, counting as ad-"; // This will remove the annoying console spam from using the -hushsteam launch option
-con_filter_text     "Damage Given to ";                         // 
-con_filter_enable   "2";                                        // 
+con_filter_text     "Damage Given to ";                         //
+con_filter_enable   "2";                                        //
 
 
 echo "[3.2] Adding shorthand command aliases";
@@ -475,7 +475,7 @@ cl_jiggle_bone_framerate_cutoff "1";
 
 echo "[5.25] Setting up mastercomfig textures very high";
 mat_filtertextures "1";
-mat_picmip "-1";
+mat_picmip "-10";
 mat_disable_fancy_blending "0";
 
 
@@ -642,16 +642,16 @@ bind "KP_MINUS"       "condump; exec autoexec.cfg;                      ; keycon
 
 echo "[6.2] Setting up binds for keyboard row 3";
 bind "TAB"            "+scorenet;                                       ; keycontainer";                        // This is the tab key
-bind "Q"              "                                                 ; keycontainer";                        // This is the q key
-bind "W"              "lastinv;                                         ; keycontainer";                        // This is the w key
-bind "E"              "+ncmforward;                                     ; keycontainer";                        // This is the e key
-bind "R"              "+defuse;                                         ; keycontainer";                        // This is the r key
-bind "T"              "+reload; r_cleardecals;                          ; keycontainer";                        // This is the t key
-bind "Y"              "impulse 201;                                     ; keycontainer";                        // This is the y key
-bind "U"              "say";                                                                                    // This is the u key
-bind "I"              "say_team";                                                                               // This is the i key
-bind "O"              "say_party";                                                                              // This is the o key
-bind "P"              "say_party";                                                                              // This is the p key
+bind "q"              "                                                 ; keycontainer";                        // This is the q key
+bind "D"              "lastinv;                                         ; keycontainer";                        // This is the w key
+bind "R"              "+ncmforward;                                     ; keycontainer";                        // This is the e key
+bind "W"              "+defuse;                                         ; keycontainer";                        // This is the r key
+bind "B"              "+reload; r_cleardecals;                          ; keycontainer";                        // This is the t key
+bind "J"              "impulse 201;                                     ; keycontainer";                        // This is the y key
+bind "F"              "say";                                                                                    // This is the u key
+bind "U"              "say_team";                                                                               // This is the i key
+bind "P"              "say_party";                                                                              // This is the o key
+bind "SEMICOLON"      "say_party";                                                                              // This is the p key
 bind "["              "cl_trigger_first_notification;                   ; keycontainer";                        // This is the [ key
 bind "]"              "cl_decline_first_notification;                   ; keycontainer";                        // This is the ] key
 bind  \               "                                                 ; keycontainer";                        // This is the backslash key. Quotes are missing due to formatting issues with backslashes.
@@ -668,14 +668,14 @@ echo "[6.3] Setting up binds for keyboard row 4";
 bind "CAPSLOCK"       "                                                 ; keycontainer";                        // This is the caps lock key
 bind "A"              "                                                 ; keycontainer";                        // This is the a key
 bind "S"              "+ncmleft;                                        ; keycontainer";                        // This is the s key
-bind "D"              "+ncmbackward;                                    ; keycontainer";                        // This is the d key
-bind "F"              "+ncmright;                                       ; keycontainer";                        // This is the f key
+bind "H"              "+ncmbackward;                                    ; keycontainer";                        // This is the d key
+bind "T"              "+ncmright;                                       ; keycontainer";                        // This is the f key
 bind "G"              "+taunt";                                                                                 // This is the g key
-bind "H"              "+use_action_slot_item;                           ; keycontainer";                        // This is the h key
-bind "J"              "+spin;                                           ; keycontainer";                        // This is the j key
-bind "K"              "                                                 ; keycontainer";                        // This is the k key
-bind "L"              "dropitem;                                        ; keycontainer";                        // This is the l key
-bind "SEMICOLON"      "disconnect;                                      ; keycontainer";                        // This is the ; key
+bind "Y"              "+use_action_slot_item;                           ; keycontainer";                        // This is the h key
+bind "N"              "+spin;                                           ; keycontainer";                        // This is the j key
+bind "E"              "                                                 ; keycontainer";                        // This is the k key
+bind "O"              "dropitem;                                        ; keycontainer";                        // This is the l key
+bind "I"              "disconnect;                                      ; keycontainer";                        // This is the ; key
 bind "'"              "+moveup;                                         ; keycontainer";                        // This is the apostrophe key
 bind "ENTER"          "                                                 ; keycontainer";                        // This is the return key
 bind "KP_LEFTARROW"   "                                                 ; keycontainer";                        // This is the Numpad 4 key
@@ -688,13 +688,13 @@ echo "[6.4] Setting up binds for keyboard row 5";
 bind "SHIFT"          "+loudshift;                                      ; keycontainer";                        // This is the left shift key
 bind "Z"              "voicemenu 0 0;                                   ; keycontainer";                        // This is the z key
 bind "X"              "voice_menu_1;                                    ; keycontainer";                        // This is the x key
-bind "C"              "voice_menu_2;                                    ; keycontainer";                        // This is the c key
-bind "V"              "voice_menu_3;                                    ; keycontainer";                        // This is the v key
-bind "B"              "+voicerecord";                                                                           // This is the b key, adding keycontainer breaks voice in the main menu
-bind "N"              "lastdisguise;                                    ; keycontainer";                        // This is the n key
-bind "M"              "open_charinfo_backpack;                          ; keycontainer";                        // This is the m key
-bind "."              "open_charinfo_changeclass;                       ; keycontainer";                        // This is the comma key
+bind "M"              "voice_menu_2;                                    ; keycontainer";                        // This is the c key
+bind "C"              "voice_menu_3;                                    ; keycontainer";                        // This is the v key
+bind "V"              "+voicerecord";                                                                           // This is the b key, adding keycontainer breaks voice in the main menu
+bind "K"              "lastdisguise;                                    ; keycontainer";                        // This is the n key
+bind "L"              "open_charinfo_backpack;                          ; keycontainer";                        // This is the m key
 bind ","              "changeclass;                                     ; keycontainer";                        // This is the period/full stop key
+bind "."              "open_charinfo_changeclass;                       ; keycontainer";                        // This is the comma key
 bind "/"              "changeteam;                                      ; keycontainer";                        // This is the slash key
 bind "RSHIFT"         "; +loudshift;                                    ; keycontainer";                        // This is the right shift key
 bind "UPARROW"        "                                                 ; keycontainer";                        // This is the up arrow key
@@ -888,10 +888,10 @@ echo "";
 echo "";
 echo "";
 echo "Loaded";
-echo "Fin#1337's TF2 Config v1.0.0";
+echo "Fin#1337's TF2 Config v1.0.1";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: January 12th 2022";
+echo "Last edited: August 9th 2022";
 echo "";
 echo "";
 echo "";
