--- a/aliases/fpsbugfix.cfg
+++ b/aliases/fpsbugfix.cfg
@@ -1,3 +1,4 @@
-record temp;
+record "temp";
 stop;
-say_team "Run 'record temp; stop;' or 'logaddress_add 1' to fix the fps bug";
+logaddress_add "1";
+say_team "Run 'record temp; stop; logaddress_add 1' to fix the fps bug";
