--- a/autoexec1.cfg
+++ b/autoexec1.cfg
@@ -1,9 +1,9 @@
-//clear;                                                          // Clear all console output
+//CS2 clear;                                                          // Clear all console output
 echo "Loading";                                                 // Echo sends text to console (NOT game chat).
-echo "Fin#1337's CS2 Config 5.0.0-alpha1";
+echo "Fin#1337's CS2 Config 5.0.0-alpha2";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: May 31st 2023";
+echo "Last edited: June 1st 2023";
 echo "";
 echo "";
 echo "";
@@ -28,10 +28,10 @@ echo "";
 
 
 echo "[0.0] Initializing";
-alias "fin_version" "echo 5.0.0-alpha1";                               // Sets version number to an alias (can be output with: "alias fin_version")
-sv_contact "csgocfg@fin.fail";                                  // Contact email for server sysop (please change this)
+alias "fin_version" "echo 5.0.0-alpha2";                               // Sets version number to an alias (can be output with: "alias fin_version")
+//CS2sv_contact "csgocfg@fin.fail";                                  // Contact email for server sysop (please change this)
 exec "./fixed_controller.360.cfg";                              // Turns on controller support
-hostname "Fin's CS2 Config 5.0.0-alpha1 - github.com/bigfinfrank/cfg";// Sets the server name shown in the scoreboard
+hostname "Fin's CS2 Config 5.0.0-alpha2 - github.com/bigfinfrank/cfg";// Sets the server name shown in the scoreboard
 sv_steamgroup "42297947";                                       // Group ID that your servers associate with (by default this is https://steamcommunity.com/groups/advancedcfg)
 cl_clanid "42297947";                                           // Current clan ID for name decoration
 
@@ -147,7 +147,7 @@ con_filter_enable "2";                                          // This only wor
 
 
 echo "[3.2] Adding shorthand command aliases";
-alias "rc" "r_cleardecals";                                     // Clears decals (bullet holes and blood, NOT graffiti)
+alias "rc" "cl_decal_clear_world";                                     // Clears decals (bullet holes and blood, NOT graffiti)
 alias "dc" "disconnect";                                        // Disconnects you from (even your own) server
 alias "nc" "noclip";                                            // Toggle noclip
 alias "q"  "quit";                                              // Exits the game entirely, bringing you to your desktop
@@ -272,8 +272,8 @@ alias "fin_gaben" "exec ./gaben.cfg";                           // Setup clean G
 
 
 echo "[3.3.10] Slow walking volume bump";
-alias "+fin_loudshift" "volume 0.15; +speed";                   // Increase volume and slow walk while holding the [+loudshift] key
-alias "-fin_loudshift" "volume 0.1;  -speed";                   // Return volume to 0.1 and stop slow walking when releasing the [+loudshift] key
+alias "+fin_loudshift" "volume 0.15; +sprint";                   // Increase volume and slow walk while holding the [+loudshift] key
+alias "-fin_loudshift" "volume 0.1;  -sprint";                   // Return volume to 0.1 and stop slow walking when releasing the [+loudshift] key
 
 
 echo "[3.3.11] Chat aliases";                                   // Reminder that chat can display 7 lines on screen while unfocused
@@ -472,8 +472,8 @@ alias "fin_decoy"     "fin_nadexhon; buy decoy;        use weapon_decoy";
 
 
 echo "[3.3.24] Disable scroll-jumping while spraying";  // Credit to: https://www.reddit.com/r/CounterStrikeBinds/comments/koytzg
-alias "+noscroll_attack" "+attack; bind mwheeldown r_cleardecals; bind mwheelup r_cleardecals";
-alias "-noscroll_attack" "-attack; bind mwheeldown +jump;         bind mwheelup +jump";
+alias "+noscroll_attack" "+attack; bind mwheeldown cl_decal_clear_world; bind mwheelup cl_decal_clear_world";
+alias "-noscroll_attack" "-attack; bind mwheeldown +jump;                bind mwheelup +jump";
 
 
 echo "[3.3.25] Rainbow Crosshair";  // Credit to: https://www.reddit.com/r/CounterStrikeBinds/comments/l3f8sq
