--- a/autoexec2.cfg
+++ b/autoexec2.cfg
@@ -42,8 +42,8 @@ alias "fin_xh60" "cl_crosshaircolor_r 255; cl_crosshaircolor_g   0; cl_crosshair
 
 
 echo "[3.3.26] Anti-AFK";
-alias "fin_antiafk"  "+left; +moveright; +attack2; +speed";
-alias "fin_antiafk2" "-left; -moveright; -attack2; -speed";
+alias "fin_antiafk"  "+left; +moveright; +attack2; +sprint";
+alias "fin_antiafk2" "-left; -moveright; -attack2; -sprint";
 //
 //
 // echo "[3.3.27] Rainbow HUD";
@@ -102,7 +102,7 @@ cl_crosshair_t "0";                                             // 0: Normal cro
 
 
 echo "[5.1] Changing mouse and sensitivity settings";
-zoom_sensitivity_ratio_mouse "0.818933027098955175";            // Additional mouse sensitivity scale factor applied when FOV is zoomed in. See https://www.reddit.com/r/GlobalOffensive/comments/43urd4
+zoom_sensitivity_ratio "0.818933027098955175";            // Additional mouse sensitivity scale factor applied when FOV is zoomed in. See https://www.reddit.com/r/GlobalOffensive/comments/43urd4
 m_customaccel_exponent "1.00";                                  // Mouse move is raised to this power before being scaled by scale factor.
 cl_sniper_delay_unscope "0";                                    // 0: Instantly unscope on fire 1: Delay visual unscope after firing
 m_customaccel_scale "0.00";                                     // Sets custom mouse acceleration to a certain value
@@ -161,18 +161,18 @@ bind "NUMLOCK"        "                                                 ; fin_ke
 echo "[7.1] Setting up binds for keyboard row 2";
 bind "`"              "toggleconsole"                                                                           // This is the grave key
 bind "1"              "+fin_knife; fin_nadexhoff;                       ; fin_keycontainer";                    // This is the 1 key
-bind "2"              "fin_nadexhoff;  slot3; slot2; slot1;  r_cleardecals;                ; fin_keycontainer"; // This is the 2 key
-bind "3"              "fin_nadexhoff;  slot3; slot1; slot2;  r_cleardecals;                ; fin_keycontainer"; // This is the 3 key
-bind "4"              "+fin_autoknifeinspect; fin_nadexhoff; r_cleardecals;                ; fin_keycontainer"; // This is the 4 key
-bind "5"              "fin_hegrenade;         r_cleardecals;            ; fin_keycontainer";                    // This is the 5 key
-bind "6"              "fin_nadexhoff; slot5;  r_cleardecals;            ; fin_keycontainer";                    // This is the 6 key
-bind "7"              "fin_hegrenade;         r_cleardecals;            ; fin_keycontainer";                    // This is the 7 key
-bind "8"              "fin_nadexhoff; slot7;  r_cleardecals;            ; fin_keycontainer";                    // This is the 8 key
-bind "9"              "fin_nadexhoff; slot8;  r_cleardecals;            ; fin_keycontainer";                    // This is the 9 key
-bind "0"              "fin_nadexhoff; slot9;  r_cleardecals;            ; fin_keycontainer";                    // This is the 0 key
-bind "-"              "fin_nadexhoff; slot0;  r_cleardecals;            ; fin_keycontainer";                    // This is the - key
-bind "="              "fin_nadexhoff; slot11; r_cleardecals;            ; fin_keycontainer";                    // This is the = key
-bind "BACKSPACE"      "fin_nadexhoff; decoy;  r_cleardecals;            ; fin_keycontainer";                    // This is the backspace key
+bind "2"              "fin_nadexhoff;  slot3; slot2; slot1;  cl_decal_clear_world;         ; fin_keycontainer"; // This is the 2 key
+bind "3"              "fin_nadexhoff;  slot3; slot1; slot2;  cl_decal_clear_world;         ; fin_keycontainer"; // This is the 3 key
+bind "4"              "+fin_autoknifeinspect; fin_nadexhoff; cl_decal_clear_world;         ; fin_keycontainer"; // This is the 4 key
+bind "5"              "slot6; cl_decal_clear_world;                     ; fin_keycontainer";                    // This is the 5 key
+bind "6"              "fin_nadexhoff; slot5;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the 6 key
+bind "7"              "slot6; cl_decal_clear_world;                     ; fin_keycontainer";                    // This is the 7 key
+bind "8"              "fin_nadexhoff; slot7;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the 8 key
+bind "9"              "fin_nadexhoff; slot8;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the 9 key
+bind "0"              "fin_nadexhoff; slot9;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the 0 key
+bind "-"              "fin_nadexhoff; slot0;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the - key
+bind "="              "fin_nadexhoff; slot11; cl_decal_clear_world;     ; fin_keycontainer";                    // This is the = key
+bind "BACKSPACE"      "fin_nadexhoff; decoy;  cl_decal_clear_world;     ; fin_keycontainer";                    // This is the backspace key
 bind "INS"            "                                                 ; fin_keycontainer";                    // This is the insert key
 bind "PGUP"           "                                                 ; fin_keycontainer";                    // This is the page up key
 bind "NUMLOCKTOGGLE"  "                                                 ; fin_keycontainer";                    // This is the Num lock key
@@ -184,11 +184,11 @@ bind "KP_MINUS"       "condump; exec ./autoexec.cfg;                    ; fin_ke
 echo "[7.2] Setting up binds for keyboard row 3";
 bind "TAB"            "+fin_scorenet;                                   ; fin_keycontainer";                    // This is the tab key
 bind "Q"              "                                                 ; fin_keycontainer";                    // This is the q key
-bind "W"              "fin_molotov;                                     ; fin_keycontainer";                    // This is the w key
-bind "E"              "+fin_ncmforward;                                 ; fin_keycontainer";                    // This is the e key
+bind "W"              "slot10;                                          ; fin_keycontainer";                    // This is the w key
+bind "E"              "+forward;                                        ; fin_keycontainer";                    // This is the e key
 bind "R"              "+fin_betteruse;                                  ; fin_keycontainer";                    // This is the r key
-bind "T"              "+reload; r_cleardecals;                          ; fin_keycontainer";                    // This is the t key
-bind "Y"              "+spray_menu; r_cleardecals;                      ; fin_keycontainer";                    // This is the y key
+bind "T"              "+reload; cl_decal_clear_world;                   ; fin_keycontainer";                    // This is the t key
+bind "Y"              "+spray_menu; cl_decal_clear_world;               ; fin_keycontainer";                    // This is the y key
 bind "U"              "messagemode";                                                                            // This is the u key
 bind "I"              "messagemode2";                                                                           // This is the i key
 bind "O"              "                                                 ; fin_keycontainer";                    // This is the o key
@@ -208,9 +208,9 @@ bind "KP_PLUS"        "                                                 ; fin_ke
 echo "[7.3] Setting up binds for keyboard row 4";
 bind "CAPSLOCK"       "toggle r_drawclipbrushes 0 2;                    ; fin_keycontainer";                    // This is the caps lock key
 bind "A"              "+fin_jthrow;                                     ; fin_keycontainer";                    // This is the a key
-bind "S"              "+fin_ncmleft;                                    ; fin_keycontainer";                    // This is the s key
-bind "D"              "+fin_ncmbackward;                                ; fin_keycontainer";                    // This is the d key
-bind "F"              "+fin_ncmright;                                   ; fin_keycontainer";                    // This is the f key
+bind "S"              "+left;                                           ; fin_keycontainer";                    // This is the s key
+bind "D"              "+back;                                           ; fin_keycontainer";                    // This is the d key
+bind "F"              "+right;                                          ; fin_keycontainer";                    // This is the f key
 bind "G"              "+lookatweapon;                                   ; fin_keycontainer";                    // This is the g key
 bind "H"              "drop;                                            ; fin_keycontainer";                    // This is the h key
 bind "J"              "+fin_spin;                                       ; fin_keycontainer";                    // This is the j key
@@ -226,18 +226,18 @@ bind "KP_RIGHTARROW"  "                                                 ; fin_ke
 
 
 echo "[7.4] Setting up binds for keyboard row 5";
-bind "SHIFT"          "+fin_loudshift;                                  ; fin_keycontainer";                    // This is the left shift key
+bind "SHIFT"          "+sprint;                                         ; fin_keycontainer";                    // This is the left shift key
 bind "Z"              "noclip                                           ; fin_keycontainer";                    // This is the z key
-bind "X"              "fin_flashbang;                                   ; fin_keycontainer";                    // This is the x key
+bind "X"              "slot7;                                           ; fin_keycontainer";                    // This is the x key
 bind "C"              "fin_handswap;                                    ; fin_keycontainer";                    // This is the c key
-bind "V"              "fin_smoke;                                       ; fin_keycontainer";                    // This is the v key
+bind "V"              "slot8;                                           ; fin_keycontainer";                    // This is the v key
 bind "B"              "+voicerecord";                                   // No keycontainer = works in the menu  // This is the b key
 bind "N"              "buymenu;                                         ; fin_keycontainer";                    // This is the n key
 bind "M"              "radio2;                                          ; fin_keycontainer";                    // This is the m key
 bind ","              "radio1;                                          ; fin_keycontainer";                    // This is the comma key
 bind "."              "radio3;                                          ; fin_keycontainer";                    // This is the period/full stop key
 bind "/"              "buyammo2;                                        ; fin_keycontainer";                    // This is the slash key
-bind "RSHIFT"         "; +fin_loudshift                                 ; fin_keycontainer";                    // This is the right shift key
+bind "RSHIFT"         "; +sprint;                                       ; fin_keycontainer";                    // This is the right shift key
 bind "UPARROW"        "                                                 ; fin_keycontainer";                    // This is the up arrow key
 bind "KP_END"         "                                                 ; fin_keycontainer";                    // This is the Numpad 1 key
 bind "KP_DOWNARROW"   "                                                 ; fin_keycontainer";                    // This is the Numpad 2 key
@@ -246,14 +246,14 @@ bind "KP_ENTER"       "fin_butt;                                        ; fin_ke
 
 
 echo "[7.5] Setting up binds for keyboard row 6";
-bind "CTRL"           "+fin_crouch;                                     ; fin_keycontainer";                    // This is the left control key
+bind "CTRL"           "+duck;                                           ; fin_keycontainer";                    // This is the left control key
 bind "LWIN"           "                                                 ; fin_keycontainer";                    // This is the windows (os) key to the left of the spacebar
 bind "ALT"            "                                                 ; fin_keycontainer";                    // This is the left alt key
 bind "SPACE"          "+fin_cjump;                                      ; fin_keycontainer";                    // This is the spacebar key
 bind "RALT"           "                                                 ; fin_keycontainer";                    // This is the right alt key
 bind "RWIN"           "                                                 ; fin_keycontainer";                    // This is the windows (os) key to the right of the spacebar
 // ** No key for Menu key **                                            ** No key for Menu key **               // The menu key isn't bindable
-bind "RCTRL"          ";+fin_crouch;                                    ; fin_keycontainer";                    // This is the right control key
+bind "RCTRL"          ";+duck;                                          ; fin_keycontainer";                    // This is the right control key
 bind "LEFTARROW"      "+left;                                           ; fin_keycontainer";                    // This is the left arrow key
 bind "DOWNARROW"      "                                                 ; fin_keycontainer";                    // This is the down arrow key
 bind "RIGHTARROW"     "+right;                                          ; fin_keycontainer";                    // This is the right arrow key
@@ -264,7 +264,7 @@ bind "KP_DEL"         "fin_ahegao;                                      ; fin_ke
 
 echo "[7.6] Setting up binds for the mouse";
 bind "MOUSE1"         "+attack;                                         ; fin_keycontainer";                    // This is the left click button
-bind "MOUSE2"         "+attack2; r_cleardecals                          ; fin_keycontainer";                    // This is the right click button
+bind "MOUSE2"         "+attack2; cl_decal_clear_world;                  ; fin_keycontainer";                    // This is the right click button
 bind "MOUSE3"         "player_ping; ping; cast_ray;                     ; fin_keycontainer";                    // This is the mouse wheel click button
 bind "MOUSE4"         "+voicerecord";                                   // No keycontainer = works in the menu  // This is one of the side mouse buttons
 bind "MOUSE5"         "fin_sniper;                                      ; fin_keycontainer";                    // This is one of the side mouse buttons
@@ -275,7 +275,7 @@ bind "MWHEELDOWN"     "+jump";                                                  
 echo "[7.7] Setting up binds for controllers";
 bind "A_BUTTON"       "+fin_cjump;                                      ; fin_keycontainer";                    // This is the A button on Xbox Controllers
 bind "B_BUTTON"       "+fin_betteruse;                                  ; fin_keycontainer";                    // This is the B button on Xbox Controllers
-bind "X_BUTTON"       "+reload; r_cleardecals;                          ; fin_keycontainer";                    // This is the X button on Xbox Controllers
+bind "X_BUTTON"       "+reload; cl_decal_clear_world;                   ; fin_keycontainer";                    // This is the X button on Xbox Controllers
 bind "Y_BUTTON"       "invnextnongrenade;                               ; fin_keycontainer";                    // This is the Y button on Xbox Controllers
 bind "L_SHOULDER"     "+lookspin;                                       ; fin_keycontainer";                    // This is left shoulder (bumper) on Xbox Controllers
 bind "R_SHOULDER"     "+duck;                                           ; fin_keycontainer";                    // This is right shoulder (bumper) on Xbox Controllers
@@ -368,7 +368,7 @@ sv_pure "1";                                                    // Forces all cl
 
 
 echo "[10.0] Sliding volume sliders";
--fin_loudshift;                                                 // Sets the global volume to our default
+//CS2 -fin_loudshift;                                                 // Sets the global volume to our default
 snd_menumusic_volume        "0";                                // Changes the main menu   music volume (Max is 0.60, .06 is 10% of that)
 snd_roundstart_volume       "0";                                // Changes the round start music volume (Max is 0.60)
 snd_roundend_volume         "0";                                // Changes the round end   music volume (Max is 0.60)
@@ -482,10 +482,10 @@ echo "";
 echo "";
 echo "";
 echo "Loaded";
-echo "Fin#1337's CS2 Config 5.0.0-alpha1";
+echo "Fin#1337's CS2 Config 5.0.0-alpha2";
 echo "https://steamcommunity.com/id/bigfinfrank";
 echo "https://github.com/bigfinfrank/cfg";
-echo "Last edited: May 31st 2023";
+echo "Last edited: June 1st 2023";
 echo "";
 echo "";
 echo "";
