--- a/practice.cfg
+++ b/practice.cfg
@@ -68,9 +68,9 @@ sv_showimpacts "1";           // 0: Don't show impact boxes 1: Show grenade and 
 sv_showimpacts_time "10";     // Show the impact times for the set number of seconds
 
 // Grenade practice
-sv_grenade_trajectory "1";              // Shows the trajectory of thrown grenades with a line that draws where the grenade went
-sv_grenade_trajectory_time "15";        // Sets the time trajectories
-sv_grenade_trajectory_dash "1";         // Makes the tracjetory line dashed
+sv_grenade_trajectory_prac_pipreview "true";  // Shows the trajectory of thrown grenades with a line that draws where the grenade went
+sv_grenade_trajectory_prac_trailtime "15";    // Sets the time trajectories
+//CS2 sv_grenade_trajectory_dash "1";         // Makes the tracjetory line dashed
 cl_grenadepreview "1";
 mp_ct_default_grenades "weapon_flashbang weapon_hegrenade weapon_smokegrenade weapon_decoy weapon_incgrenade";
 mp_t_default_grenades "weapon_flashbang weapon_hegrenade weapon_smokegrenade weapon_decoy weapon_molotov";
