--- a/fixed_controller.360.cfg
+++ b/fixed_controller.360.cfg
@@ -30,53 +30,53 @@ joy_advaxisy                    "1";
 joy_advaxisz                    "0";
 
 joy_pitchsensitivity            "-0.85";
-joy_pitchthreshold              "0.025";          // look dead zone settings
+//CS2 joy_pitchthreshold              "0.025";          // look dead zone settings
 joy_yawsensitivity              "-0.9";
-joy_sidethreshold               "0.1";
-joy_yawthreshold                "0.0";
+//CS2 joy_sidethreshold               "0.1";
+//CS2 joy_yawthreshold                "0.0";
 joy_sidesensitivity             "1";
-joy_forwardthreshold            "0.1";            // movement dead zone settings
-joy_forwardsensitivity          "-1.0";
+//CS2 joy_forwardthreshold            "0.1";            // movement dead zone settings
+//CS2 joy_forwardsensitivity          "-1.0";
 
-joy_curvepoint_1                "0.005";
-joy_curvepoint_2                "0.1";
-joy_curvepoint_3                "0.4";
-joy_curvepoint_4                "0.8";
-joy_curvepoint_end              "2";
+//CS2 joy_curvepoint_1                "0.005";
+//CS2 joy_curvepoint_2                "0.1";
+//CS2 joy_curvepoint_3                "0.4";
+//CS2 joy_curvepoint_4                "0.8";
+//CS2 joy_curvepoint_end              "2";
 
 //(auto aim dampening)
-joy_autoAimDampenMethod         "1";
-joy_autoaimdampenrange          "0.99";
-joy_autoaimdampen               "0.4";
+//CS2 joy_autoAimDampenMethod         "1";
+//CS2 joy_autoaimdampenrange          "0.99";
+//CS2 joy_autoaimdampen               "0.4";
 
-joy_lowend                      "0.35";
-joy_lowmap                      "0.1";
+//CS2 joy_lowend                      "0.35";
+//CS2 joy_lowmap                      "0.1";
 
-joy_gamma                       "0.1";
-joy_accelmax                    "1.0";
-joy_accelscale                  "6.0";
-joy_accelscalepoly              "0.5";
+//CS2 joy_gamma                       "0.1";
+//CS2 joy_accelmax                    "1.0";
+//CS2 joy_accelscale                  "6.0";
+//CS2 joy_accelscalepoly              "0.5";
 
 joy_response_move               "5";
 joy_response_look               "0";
-joy_response_look_pitch         "0";
+//CS2 joy_response_look_pitch         "0";
 
 
-joy_inverty                     "0";
+//CS2 joy_inverty                     "0";
 joy_movement_stick              "0";
 
-zoom_sensitivity_ratio_joystick "0.7";
+//CS2 zoom_sensitivity_ratio_joystick "0.7";
 
 
 joystick 1
 
-cl_autowepswitch                "1";
+//CS2 cl_autowepswitch                "1";
 option_duck_method              "0";
 option_speed_method             "0";
 
-cl_rumblescale                  "1.0";
--speed // VALVE: don't start off in the slow (walking) state
-+jlook // VALVE: allow looking up and down
+//CS2 cl_rumblescale                  "1.0";
+-sprint // VALVE: don't start off in the slow (walking) state
+//CS2 +jlook  // VALVE: allow looking up and down
 
 // *** joy_pitchsensitivity_default "-0.85";      *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
 // *** joy_yawsensitivity_default   "-0.9";       *** IN DEFAULT controller.360.cfg BUT IS NO LONGER AN EXISTENT CONVAR ***
